--- a/custom_config.conf
+++ b/custom_config.conf
@@ -1,5 +1,6 @@
-locustfile = /Users/zak/Documents/Projects/Locust/locustTest.py
-headless = true
+locustfile = /Users/zak/Documents/Projects/Locust/locustTestMain.py
+#locustfile = /Users/zak/Documents/Projects/Locust/locustTestSearch.py
+headless = false
 master = true
 expect-workers = 5
 host = https://fstravel.com
